--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
       body {
         font-family: "Arial", sans-serif;
-        background: url("/pool-bg.jpg") center center/cover no-repeat fixed;
+        background: url("./docs/assets/pool-bg.jpg") center center/cover
+          no-repeat fixed;
         min-height: 100vh;
         display: flex;
         align-items: center;
@@ -326,7 +327,10 @@
     <div class="container">
       <!-- Logo -->
       <div class="logo">
-        <img src="/pooladventureslogo-opt.png" alt="Pool Adventures Inc Logo" />
+        <img
+          src="./docs/assets/pooladventureslogo-opt.png"
+          alt="Pool Adventures Inc Logo"
+        />
       </div>
 
       <!-- Main Content -->
