Fix the phone number

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
           </div>
           <div class="contact-item">
             <span>📞</span>
-            <a href="tel:+1234567890">(813) 770-0615</a>
+            <a href="tel:8137700615">(813) 770-0615</a>
           </div>
         </div>
       </div>
