Add meta description

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="./docs/assets/favicon.ico" />
+    <meta
+      name="description"
+      content="Our new website is launching soon! Reach out now to schedule your FREE consultation and enjoy crystal-clear water year-round with the latest technology and techniques."
+    />
     <title>Coming soon - Pool Adventures Inc</title>
     <style>
       * {
