--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
     <link rel="icon" type="image/x-icon" href="./docs/assets/favicon.ico" />
     <meta
       name="title"
-      content="Pool Adventures Inc - Professional Pool Cleaning & Maintenance Services"
+      content="Professional Pool Cleaning & Maintenance Services"
     />
-    <meta name="description" content="Professional pool cleaning, maintenance,
-    and repair services. Licensed & insured with 10+ years experience. />
+    <meta
+      name="description"
+      content="Professional pool cleaning, maintenance,
+    and repair services. Licensed & insured with 10+ years experience."
+    />
     <meta
       name="keywords"
       content="pool cleaning, pool maintenance, pool repair, pool service, pool equipment, swimming pool service, modern pool technology"
